--- a/my-new-email.html
+++ b/my-new-email.html
@@ -102,10 +102,11 @@
   <body>
     <div
       style="
-        width: 50%;
+        width: fit-content;
         margin: auto;
         border: 1px solid #8a3c90;
         background: #8a3c907a;
+        box-sizing: border-box;
       "
     >
       <table
